# otel-wasi

./: .gitignore  Cargo.toml  README.md  dagger.json  rust-toolchain.toml
.dagger/: go.mod  main.go
.github/workflows/: ci.yml
examples/wasmcloud-http-hello/: Cargo.toml  README.md
examples/wasmcloud-http-hello/.wash/: config.yaml
examples/wasmcloud-http-hello/src/: lib.rs
examples/wasmcloud-http-hello/wit/: world.wit
examples/wasmcloud-nats-echo/: Cargo.toml  README.md
examples/wasmcloud-nats-echo/.wash/: config.yaml
examples/wasmcloud-nats-echo/src/: lib.rs
examples/wasmcloud-nats-echo/wit/: world.wit
otel-wasi/: Cargo.toml
otel-wasi-dylint/: Cargo.toml
otel-wasi-dylint/src/: lib.rs
otel-wasi-dylint/tests/ui/fail/: error_with_slug_on_error.rs  error_with_slug_on_error.stderr  with_slug_on_error.rs  with_slug_on_error.stderr
otel-wasi-dylint/tests/ui/pass/: with_slug_on_io_error.rs
otel-wasi-macros/: Cargo.toml
otel-wasi-macros/src/: lib.rs
otel-wasi/src/: lib.rs
otel-wasi/tests/: trybuild.rs
otel-wasi/tests/ui/fail/: invalid_option.rs  invalid_option.stderr  missing_service.rs  missing_service.stderr
otel-wasi/tests/ui/pass/: async_plain.rs  async_question_mark.rs  async_result.rs  async_unit.rs  custom_wasi_error.rs  explicit_parent.rs  generic_converted_export.rs  generic_export.rs  main_attribute.rs  plain.rs  question_mark.rs  result.rs  result_with_slug.rs  unit.rs  wasi_error_macro.rs  with_slug.rs
