[package]
name = "otel-wasi-macros"
version.workspace = true
edition.workspace = true
description = "Proc-macro for #[wasi_instrument] attribute to instrument WASI functions with OpenTelemetry spans"
license = "AGPL-3.0"
publish = ["crates-io"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
