[package]
name = "otel-wasi"
version.workspace = true
edition.workspace = true
publish = ["crates-io"]

[features]
default = ["macros"]
macros = ["dep:otel-wasi-macros"]

[dependencies]
opentelemetry = "0.31.0"
opentelemetry_sdk = { version = "0.31.0" }
opentelemetry-wasi = { package = "opentelemetry-wasi", git = "https://github.com/bytecodealliance/opentelemetry-wasi", branch = "main" }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = "0.3"
otel-wasi-macros = { path = "../otel-wasi-macros", optional = true }

[dev-dependencies]
trybuild = "1"
