[package]
name = "otel-wasi"
version.workspace = true
edition.workspace = true
[features]
default = ["macros"]
macros = ["dep:otel-wasi-macros"]

[dependencies]
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-wasi = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
otel-wasi-macros = { path = "../otel-wasi-macros", optional = true }

[dev-dependencies]
trybuild = "1"
