[package]
name = "otel-wasi-wasmcloud-nats-echo-example"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
name = "otel_wasi_wasmcloud_nats_echo_example"

[dependencies]
otel-wasi = { path = "../../otel-wasi" }
opentelemetry = "0.31.0"
tracing = "0.1"
tracing-opentelemetry = "0.32"
wit-bindgen = "0.57"
